# FS-Semestre-2

Estacionamientos-Diego/Back-v2-main/: README.md
Estacionamientos-Diego/Back-v2-main/code/server/: Camera.cxx  Detector.cxx  Manager.cxx  Scanner.cxx
Estacionamientos-Diego/Backend/: README.md
Estacionamientos-Diego/Frontend/: .flutter-plugins
Estacionamientos-Diego/Frontend/ios/Runner.xcodeproj/: project.pbxproj
Estacionamientos-Diego/Frontend/lib/: main.dart
Estacionamientos-Diego/Frontend/lib/screens/: cantidad.dart  login.dart
Estacionamientos-Diego/Frontend/lib/utils/: colors.dart
Estacionamientos-Diego/Frontend/macos/Runner.xcodeproj/: project.pbxproj
Estacionamientos/Back-v2-main/: .gitignore
Estacionamientos/Back-v2-main/code/: CMakeLists.txt  makefile
Estacionamientos/Back-v2-main/code/API/: API.py
Estacionamientos/Back-v2-main/code/server/: App.cxx  Camera.hxx  Detector.hxx  Manager.hxx  Scanner.hxx  Types.hxx
Estacionamientos/Backend/: README.md  requirements.txt
Estacionamientos/Frontend/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
Estacionamientos/Frontend/.dart_tool/: package_config.json  package_config_subset
Estacionamientos/Frontend/android/app/: build.gradle
Estacionamientos/Frontend/ios/Runner/: Info.plist
Estacionamientos/Frontend/lib/: main.dart
Estacionamientos/Frontend/lib/Database/: Parking_Database.dart
Estacionamientos/Frontend/linux/: CMakeLists.txt
Estacionamientos/Frontend/web/: index.html
Estacionamientos/Frontend/windows/: CMakeLists.txt
(+70 files in other folders)
